manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookshop
  labels:
    app.kubernetes.io/part-of: bookshop
    team: sre-course
